--- a/src/index.css
+++ b/src/index.css
@@ -14,16 +14,18 @@ a.active {
   border-bottom: 3px solid #46a358;
   transition: all ease 200ms;
 }
+
+.logo {
+  border: none;
+}
+.logo.active {
+  border: none;
+}
+
 .basket {
   height: 24px;
 }
 .basket.active {
-  border: none;
-}
-.logo{
-  border: none;
-}
-.logo.active {
   border: none;
 }
 
@@ -31,107 +33,23 @@ a.active {
   width: 0px;
 }
 .hovered {
-  transform: scale(1.1); /* Ikonkani kattarish */
+  transform: scale(1.1);
   border-radius: 0px;
-  /* border-color: red; */
-  transition: transform 0.3s ease, border-width 0.3s ease, border-radius 0.3s ease, border-color 0.3s ease; /* Ranglarni o'zgartirish uchun tranzitsiya */
+  transition: transform 0.3s ease, border-width 0.3s ease,
+    border-radius 0.3s ease, border-color 0.3s ease;
 }
 
 .icon-hovered {
-  transform: scale(1.2); /* Ikonkani kattarish */
-  transition: transform 0.3s ease, color 0.3s ease; /* Animatsiyani animatsiyalash */
+  transform: scale(1.2);
+  transition: transform 0.3s ease, color 0.3s ease;
 }
 
 li {
-  transition: transform 0.3s ease; /* Darxolni qayta orqaga o'tkazish uchun animatsiya */
+  transition: transform 0.3s ease;
 }
 
-
-
-.btn-style510 {
-  --btn-color: #46A358;
-  --btn-hover-color: #3b894b;
-  position: relative;
-  background-color: var(--btn-color);
-  border-color: var(--btn-color);
-  color: #fff;
-
-  &::before,
-  &::after {
-    width: 49px;
-    height: 35px;
-    position: absolute;
-    border-radius: 50%;
-    background-color: var(--btn-hover-color);
-    transition: all 0.5s ease;
-    transform: scale(0);
-    content: "";
-    z-index: -1;
-  }
-
-  &::before {
-    top: -8px;
-    left: 10%;
-  }
-
-  &::after {
-    bottom: -8px;
-    right: 15%;
-  }
-
-  &:hover {
-    background-color: var(--btn-hover-color);
-    border-color: var(--btn-hover-color);
-
-    &::before,
-    &::after {
-      transform: scale(1);
-    }
-  }
-}
-.btn-style509 {
-  --btn-color: #46A358;
-  --btn-hover-color: #3b894b;
-  position: relative;
-  background-color: var(--btn-color);
-  border-color: var(--btn-color);
-  color: #fff;
-
-  &::before,
-  &::after {
-    width: 89px;
-    height: 48px;
-    position: absolute;
-    border-radius: 50%;
-    background-color: var(--btn-hover-color);
-    transition: all 0.5s ease;
-    transform: scale(0);
-    content: "";
-    z-index: -1;
-  }
-
-  &::before {
-    top: -8px;
-    left: 10%;
-  }
-
-  &::after {
-    bottom: -8px;
-    right: 15%;
-  }
-
-  &:hover {
-    background-color: var(--btn-hover-color);
-    border-color: var(--btn-hover-color);
-
-    &::before,
-    &::after {
-      transform: scale(1);
-    }
-  }
-}
 .btn-style501 {
-  --btn-color: linear-gradient(to right, #46A358 0%, #5FB376 51%, #46A358 100%);
+  --btn-color: linear-gradient(to right, #46a358 0%, #5fb376 51%, #46a358 100%);
 
   background-image: var(--btn-color);
   background-size: 200% auto;
@@ -139,9 +57,22 @@ li {
   border-color: transparent;
   color: #464646;
   transition: background-position 0.5s ease, color 0.5s ease;
+}
 
-  &:hover {
-    background-position: right bottom;
-    color: #000;
-  }
+.btn-style510 {
+  --btn-color: #46a358;
+  --btn-hover-color: #3b894b;
+  position: relative;
+  background-color: var(--btn-color);
+  border-color: var(--btn-color);
+  color: #fff;
+}
+
+.btn-style509 {
+  --btn-color: #46a358;
+  --btn-hover-color: #3b894b;
+  position: relative;
+  background-color: var(--btn-color);
+  border-color: var(--btn-color);
+  color: #fff;
 }
